<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_section">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_details"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            tools:text="已完成" />

        <TextView
            style="@style/JobDetailsLabel"
            android:text="@string/label_job_id" />

        <TextView
            android:id="@+id/textJobId"
            style="@style/JobDetailsValue"
            android:fontFamily="monospace"
            tools:text="job-123" />

        <TextView
            style="@style/JobDetailsLabel"
            android:text="@string/label_provider" />

        <TextView
            android:id="@+id/textProvider"
            style="@style/JobDetailsValue"
            tools:text="openai" />

        <TextView
            style="@style/JobDetailsLabel"
            android:text="@string/label_model" />

        <TextView
            android:id="@+id/textModel"
            style="@style/JobDetailsValue"
            tools:text="gpt-4o" />

        <TextView
            style="@style/JobDetailsLabel"
            android:text="@string/label_tokens" />

        <TextView
            android:id="@+id/textTokens"
            style="@style/JobDetailsValue"
            tools:text="1234" />

        <TextView
            style="@style/JobDetailsLabel"
            android:text="@string/label_elapsed" />

        <TextView
            android:id="@+id/textElapsed"
            style="@style/JobDetailsValue"
            tools:text="2 分 18 秒" />

        <TextView
            style="@style/JobDetailsLabel"
            android:text="@string/prompt_hint" />

        <TextView
            android:id="@+id/textPrompt"
            style="@style/JobDetailsValue"
            tools:text="做一个计数器" />
    </LinearLayout>
</ScrollView>
